2005-09-29  Francois Marier  <francois@serioushack.com>

	* src/UniformPanel.cpp (setShader): Use all_uniforms instead of
	uniforms in order to get all the dependent ones too.
	(addVar): No longer needed to iterate through the evaluator's
	uniforms since all_uniforms already contains them.

2005-09-28  Francois Marier  <francois@serioushack.com>

	* src/UniformPanel.cpp, ShGenMap.cpp, ShrikeCanvas.cpp,
	shaders/NonPeriodic3D.cpp, GlassShader.cpp,
	ShinyBumpMapShader.cpp, HorizonMapping.cpp, JeweledShader.cpp,
	Textures.cpp, Derivatives.cpp, DiscoShader.cpp, BumpMapShader.cpp,
	PhongShader.cpp, BrickHorizon.cpp, SatinShader.cpp,
	WorleyShader.cpp, NonPeriodic.cpp, BrickWall.cpp, Ashikhmin.cpp,
	HomomorphicShader.cpp, Checkerboard.cpp, LuciteShader.cpp,
	EnvMapShader.cpp, AlgebraShader.cpp, CookTorrance.cpp: 
	Replace calls to ShImage::load_PNG and ShImage::save_PNG to the
	free functions in ShUtil.
	Resolve ambiguity with the max/min function and ShAttrib1f.

2005-09-21  Francois Marier  <francois@serioushack.com>

	* src/ShrikeGl.hpp: Fix the OpenGL includes to be easier to
	understand and to match the ones in Sh.

	* src/shaders/NoiseShader.cpp: Rename cubicstep() to smoothstep().

	* src/shaders/Checkerboard.cpp, JeweledShader.cpp: Rename
	smoothstep() to linstep().

2005-09-15  Francois Marier  <francois@serioushack.com>

	* src/shaders/NoiseShader.cpp: replace deprecated_smoothstep()
	with cubicstep().

2005-09-09  Francois Marier  <francois@serioushack.com>

	* src/UniformPanel.cpp, ShrikeCanvas.cpp, ShGenMap.cpp,
	src/shaders/DiscoShader.cpp, PhongShader.cpp, WorleyShader.cpp,
	Textures.cpp, EnvMapShader.cpp, ShinyBumpMapShader.cpp,
	SatinShader.cpp, HomomorphicShader.cpp, JeweledShader.cpp,
	AlgebraShader.cpp, GlassShader.cpp, LuciteShader.cpp,
	HorizonMapping.cpp, Derivatives.cpp, BumpMapShader.cpp: Rename
	loadPng and savePng to load_PNG and save_PNG.

2005-08-15  Francois Marier  <francois@serioushack.com>
